--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <!--Navbar-->
     <nav></nav>
     <!--Carosello-->
-    <div class="carousel"></div>
+    <header>
+        <div class="header-banner"></div>
+    </header>
     <!--The Moon-->
     <div class="moon"></div>
     <!--Millions-->
