--- a/index.html
+++ b/index.html
@@ -1,20 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!--Banner-->
     <div class="banner"></div>
     <!--Navbar-->
     <nav></nav>
     <!--Carosello-->
     <header>
-        <div class="header-banner"></div>
+      <div class="banner">
+        <div class="carousel">
+          <div class="slide active">
+            <img src="media/static/image (4).webp" alt="Slide 1" />
+            <div class="caption">
+              <h2>PancakeSwap V3</h2>
+              <p>Claim $135K CAKE Airdrop & exclusive NFT</p>
+              <a href="#" class="btn">Trade Now</a>
+            </div>
+          </div>
+          <div class="slide">
+            <img src="./media/static/image.webp" alt="Slide 2" />
+            <div class="caption">
+              <h2>Hello Aptos Project Teams</h2>
+              <a href="#" class="btn">Learn More</a>
+            </div>
+          </div>
+          <div class="slide">
+            <img src="media/static/image (3).webp " alt="Slide 3" />
+            <div class="caption">
+              <p>Perpetual Future</p>
+              <h2>UP TO 100X LEVERAGE</h2>
+              <a href="#" class="btn">Learn More</a>
+            </div>
+          </div>
+        </div>
+        <div class="indicators">
+          <div class="indicator active"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+        </div>
+      </div>
     </header>
     <!--The Moon-->
     <div class="moon"></div>
@@ -32,5 +63,6 @@
     <div class="start"></div>
     <!--Footer-->
     <footer></footer>
-</body>
+    <script src="./script/script.js"></script>
+  </body>
 </html>
