--- a/index.html
+++ b/index.html
@@ -17,38 +17,108 @@
       <div class="banner">
         <div class="carousel">
           <div class="slide active">
-            <img src="media/static/image (4).webp" alt="Slide 1" />
-            <div class="caption">
-              <h2>PancakeSwap V3</h2>
-              <p>Claim $135K CAKE Airdrop & exclusive NFT</p>
-              <a href="#" class="btn">Trade Now</a>
+            <div class="slide1"></div>
+          </div>
+          <div class="slide">
+            <div class="slide2">
+              <img
+                id="bunny-slide1"
+                src="media/static/image (4).webp"
+                alt="Slide 2"
+              />
+              <img
+                id="coin-bottom"
+                src="./media/static/image (7).webp"
+                alt="cake-top"
+              />
+              <img
+                id="coin-top"
+                src="./media/static/image (8).webp"
+                alt="cake-bottom"
+              />
+              <div class="framework-container">
+                <span class="framework-light"></span>
+                <img
+                  id="framework"
+                  src="./media/static/image (9).webp"
+                  alt="bunny-framework"
+                />
+                <div class="loading-animation"></div>
+              </div>
+              <img id="star1" src="./media/static/image (5).webp" alt="star1">
+              <img id="star2" src="./media/static/image (6).webp" alt="star2">
+              <div class="caption">
+                <h2>PancakeSwap V3</h2>
+                <p>Claim $135K CAKE Airdrop & exclusive NFT</p>
+                <a href="#" class="head-btn">Trade Now</a>
+              </div>
             </div>
           </div>
           <div class="slide">
-            <img src="./media/static/image.webp" alt="Slide 2" />
-            <div class="caption">
-              <h2>Hello Aptos Project Teams</h2>
-              <a href="#" class="btn">Learn More</a>
+            <div class="slide3">
+              <img src="./media/static/image.webp" alt="Slide 2" />
+              <div class="caption">
+                <h2>Hello Aptos Project Teams</h2>
+                <a href="#" class="head-btn">Learn More</a>
+              </div>
             </div>
           </div>
           <div class="slide">
-            <img src="media/static/image (3).webp " alt="Slide 3" />
-            <div class="caption">
-              <p>Perpetual Future</p>
-              <h2>UP TO 100X LEVERAGE</h2>
-              <a href="#" class="btn">Learn More</a>
+            <div class="slide4">
+              <img src="media/static/image (3).webp " alt="Slide 3" />
+              <div class="caption">
+                <p>Perpetual Future</p>
+                <h2>UP TO 100X LEVERAGE</h2>
+                <a href="#" class="head-btn">Learn More</a>
+              </div>
             </div>
+          </div>
+          <div class="slide">
+            <div class="slide5"></div>
           </div>
         </div>
         <div class="indicators">
           <div class="indicator active"></div>
           <div class="indicator"></div>
           <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
         </div>
       </div>
     </header>
     <!--The Moon-->
-    <div class="moon"></div>
+    <div class="moon">
+      <svg
+        viewBox="0 0 1660 339"
+        class="sc-231a1e38-0 dPwWVs slide-svg-dark"
+        width="100%"
+        color="text"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M804 166.523C520.5 166.523 267.5 290.022 0 304V338.5H1660V0C1358.83 0 1104 166.523 804 166.523Z"
+          fill="url(#paint0_linear_dark)"
+        ></path>
+        <defs>
+          <linearGradient
+            id="paint0_linear_dark"
+            x1="830"
+            y1="83.5"
+            x2="830"
+            y2="338.5"
+            gradientUnits="userSpaceOnUse"
+          >
+            <stop stop-color="#08060B" stop-opacity="0.2"></stop>
+            <stop
+              offset="0.545554"
+              stop-color="#08060B"
+              stop-opacity="0.5"
+            ></stop>
+            <stop offset="1" stop-color="#08060B"></stop>
+          </linearGradient>
+        </defs>
+      </svg>
+    </div>
     <!--Millions-->
     <div class="million"></div>
     <!--Trade-->
