slide number fixed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             <div class="slide1"></div>
           </div>
           <div class="slide">
-            <div class="slide2">
+            <div class="slide2"></div>
+          </div>
+          <div class="slide">
+            <div class="slide3">
               <img
                 id="bunny-slide1"
                 src="media/static/image (4).webp"
@@ -45,20 +48,14 @@
                 />
                 <div class="loading-animation"></div>
               </div>
-              <img id="star1" src="./media/static/image (5).webp" alt="star1">
-              <img id="star2" src="./media/static/image (6).webp" alt="star2">
+              <img id="star1" src="./media/static/image (5).webp" alt="star1" />
+              <img id="star2" src="./media/static/image (6).webp" alt="star2" />
               <div class="caption">
                 <h2>PancakeSwap V3</h2>
-                <p>Claim $135K CAKE Airdrop & exclusive NFT</p>
-                <a href="#" class="head-btn">Trade Now</a>
-              </div>
-            </div>
-          </div>
-          <div class="slide">
-            <div class="slide3">
-              <img src="./media/static/image.webp" alt="Slide 2" />
-              <div class="caption">
-                <h2>Hello Aptos Project Teams</h2>
+                <span></span>
+                <p id="purple-webkit">
+                  Claim $135K CAKE Airdrop & exclusive NFT
+                </p>
                 <a href="#" class="head-btn">Learn More</a>
               </div>
             </div>
