--- a/index.html
+++ b/index.html
@@ -17,10 +17,27 @@
       <div class="banner">
         <div class="carousel">
           <div class="slide active">
-            <div class="slide1"></div>
+            <div class="slide1">
+              <div class="caption">
+                <h2>Ev3ryone's Favourite D3X</h2>
+                <p id="purple-webkit">PancakeSwap v3 is live!</p>
+                <a href="#" class="head-btn">Discover V3</a>
+              </div>
+              <img src="./media/static/image (2) copia.webp" alt="" />
+            </div>
           </div>
           <div class="slide">
-            <div class="slide2"></div>
+            <div class="slide2">
+              <div class="caption">
+                <h2>PancakeSwap v3 Migration</h2>
+                <p id="purple-webkit">
+                  Migrate to continue farming CAKE rewards and earning trading
+                  fees
+                </p>
+                <a href="#" class="head-btn">Proceed</a>
+                <a href="#" class="head-btn">Guide</a>
+              </div>
+            </div>
           </div>
           <div class="slide">
             <div class="slide3">
@@ -52,7 +69,6 @@
               <img id="star2" src="./media/static/image (6).webp" alt="star2" />
               <div class="caption">
                 <h2>PancakeSwap V3</h2>
-                <span></span>
                 <p id="purple-webkit">
                   Claim $135K CAKE Airdrop & exclusive NFT
                 </p>
@@ -62,16 +78,22 @@
           </div>
           <div class="slide">
             <div class="slide4">
-              <img src="media/static/image (3).webp " alt="Slide 3" />
+              <img src="./media/static/bunny4.webp" alt="Slide 4" />
               <div class="caption">
-                <p>Perpetual Future</p>
-                <h2>UP TO 100X LEVERAGE</h2>
+                <p>Get in Touch</p>
                 <a href="#" class="head-btn">Learn More</a>
               </div>
             </div>
           </div>
           <div class="slide">
-            <div class="slide5"></div>
+            <div class="slide5">
+              <img src="media/static/image (3).webp " alt="Slide 3" />
+              <div class="caption">
+                <p>Perpetual Future</p>
+                <h2>UP TO 100X LEVERAGE</h2>
+                <a href="#" class="head-btn">Trade now</a>
+              </div>
+            </div>
           </div>
         </div>
         <div class="indicators">
