--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           <div class="slide active">
             <div class="slide1">
               <div class="caption">
-                <h2>Ev3ryone's Favourite D3X</h2>
-                <p id="purple-webkit">PancakeSwap v3 is live!</p>
-                <a href="#" class="head-btn">Discover V3</a>
+                <h2 id="purple-webkit">Ev3ryone's Favourite D3X</h2>
+                <p>PancakeSwap v3 is live!</p>
               </div>
-              <img src="./media/static/image (2) copia.webp" alt="" />
+              <a href="#" class="head-btn">Discover V3</a>
+              <img id="space-bunny" src="./media/static/image (2) copia.webp" alt="space-bunny" />
             </div>
           </div>
           <div class="slide">
