--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <p>PancakeSwap v3 is live!</p>
               </div>
               <a href="#" class="head-btn">Discover V3</a>
-              <img id="space-bunny" src="./media/static/image (2) copia.webp" alt="space-bunny" />
+              <img id="space-station" src="./media/static/image (2) copia.webp" alt="space-station" />
+              <img id="space-bunny" src=".//media/static/space-bunny.webp" alt="space-bunny">
             </div>
           </div>
           <div class="slide">
