--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
           </div>
           <div class="slide">
             <div class="slide2">
+              <img id="slide2-bunny" src="./media/static/slide2-bunny.webp" alt="slide2-bunny">
               <div class="caption">
                 <h2>PancakeSwap v3 Migration</h2>
-                <p id="purple-webkit">
+                <p>
                   Migrate to continue farming CAKE rewards and earning trading
                   fees
                 </p>
-                <a href="#" class="head-btn">Proceed</a>
-                <a href="#" class="head-btn">Guide</a>
               </div>
+              <a href="#" class="head-btn">Proceed</a>
+              <a href="#" class="head-btn2">Guide</a>
             </div>
           </div>
           <div class="slide">
