baloon bunny animation fixed

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           <div class="slide">
             <div class="slide3">
               <img
-                id="bunny-slide1"
+                id="baloon-bunny"
                 src="media/static/image (4).webp"
-                alt="Slide 2"
+                alt="baloon bunny"
               />
               <img
                 id="coin-bottom"
