slide 3 objects fixed

--- a/index.html
+++ b/index.html
@@ -23,13 +23,25 @@
                 <p>PancakeSwap v3 is live!</p>
               </div>
               <a href="#" class="head-btn">Discover V3</a>
-              <img id="space-station" src="./media/static/image (2) copia.webp" alt="space-station" />
-              <img id="space-bunny" src=".//media/static/space-bunny.webp" alt="space-bunny">
+              <img
+                id="space-station"
+                src="./media/static/image (2) copia.webp"
+                alt="space-station"
+              />
+              <img
+                id="space-bunny"
+                src=".//media/static/space-bunny.webp"
+                alt="space-bunny"
+              />
             </div>
           </div>
           <div class="slide">
             <div class="slide2">
-              <img id="slide2-bunny" src="./media/static/slide2-bunny.webp" alt="slide2-bunny">
+              <img
+                id="slide2-bunny"
+                src="./media/static/slide2-bunny.webp"
+                alt="slide2-bunny"
+              />
               <div class="caption">
                 <h2>PancakeSwap v3 Migration</h2>
                 <p>
@@ -74,8 +86,8 @@
                 <p id="purple-webkit">
                   Claim $135K CAKE Airdrop & exclusive NFT
                 </p>
-                <a href="#" class="head-btn">Learn More</a>
               </div>
+              <a href="#" class="head-btn">Learn More</a>
             </div>
           </div>
           <div class="slide">
@@ -83,8 +95,8 @@
               <img src="./media/static/bunny4.webp" alt="Slide 4" />
               <div class="caption">
                 <p>Get in Touch</p>
-                <a href="#" class="head-btn">Learn More</a>
               </div>
+              <a href="#" class="head-btn">Learn More</a>
             </div>
           </div>
           <div class="slide">
@@ -93,8 +105,8 @@
               <div class="caption">
                 <p>Perpetual Future</p>
                 <h2>UP TO 100X LEVERAGE</h2>
-                <a href="#" class="head-btn">Trade now</a>
               </div>
+              <a href="#" class="head-btn">Trade now</a>
             </div>
           </div>
         </div>
