--- a/index.html
+++ b/index.html
@@ -92,16 +92,17 @@
           </div>
           <div class="slide">
             <div class="slide4">
-              <img src="./media/static/bunny4.webp" alt="Slide 4" />
+              <img id="pancake-logo" src="./media/static/logo.webp" alt="pancake logo" />
+              <img id="gm-bunny" src="./media/static/gm-bunny.webp" alt="">
               <div class="caption">
-                <p>Get in Touch</p>
+                <h2>gm eth teams</h2>
               </div>
-              <a href="#" class="head-btn">Learn More</a>
+              <a href="#" class="head-btn">Get in Touch</a>
             </div>
           </div>
           <div class="slide">
             <div class="slide5">
-              <img src="media/static/image (3).webp " alt="Slide 3" />
+              <img src="media/static/trading-bunny.webp " alt="Slide 3" />
               <div class="caption">
                 <p>Perpetual Future</p>
                 <h2>UP TO 100X LEVERAGE</h2>
