--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
           </div>
           <div class="slide">
             <div class="slide5">
-              <img src="media/static/trading-bunny.webp " alt="Slide 3" />
+              <img id="trading-bunny" src="media/static/trading-bunny.webp " alt="trading-bunny" />
               <div class="caption">
-                <p>Perpetual Future</p>
+                <p>Perpetual Futures</p>
                 <h2>UP TO 100X LEVERAGE</h2>
               </div>
               <a href="#" class="head-btn">Trade now</a>
