--- a/index.html
+++ b/index.html
@@ -92,8 +92,12 @@
           </div>
           <div class="slide">
             <div class="slide4">
-              <img id="pancake-logo" src="./media/static/logo.webp" alt="pancake logo" />
-              <img id="gm-bunny" src="./media/static/gm-bunny.webp" alt="">
+              <img
+                id="pancake-logo"
+                src="./media/static/logo.webp"
+                alt="pancake logo"
+              />
+              <img id="gm-bunny" src="./media/static/gm-bunny.webp" alt="" />
               <div class="caption">
                 <h2>gm eth teams</h2>
               </div>
@@ -102,7 +106,11 @@
           </div>
           <div class="slide">
             <div class="slide5">
-              <img id="trading-bunny" src="media/static/trading-bunny.webp " alt="trading-bunny" />
+              <img
+                id="trading-bunny"
+                src="media/static/trading-bunny.webp "
+                alt="trading-bunny"
+              />
               <div class="caption">
                 <p>Perpetual Futures</p>
                 <h2>UP TO 100X LEVERAGE</h2>
@@ -124,31 +132,31 @@
     <div class="moon">
       <svg
         viewBox="0 0 1660 339"
-        class="sc-231a1e38-0 dPwWVs slide-svg-dark"
+        class="sc-231a1e38-0 dPwWVs slide-svg-light"
         width="100%"
         color="text"
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
-          d="M804 166.523C520.5 166.523 267.5 290.022 0 304V338.5H1660V0C1358.83 0 1104 166.523 804 166.523Z"
-          fill="url(#paint0_linear_dark)"
+          d="M804 167.023C520.5 167.023 267.5 290.522 0 304.5V339H1660V0.5C1358.83 0.5 1104 167.023 804 167.023Z"
+          fill="url(#paint0_linear_light)"
         ></path>
         <defs>
           <linearGradient
-            id="paint0_linear_dark"
+            id="paint0_linear_light"
             x1="830"
-            y1="83.5"
+            y1="84"
             x2="830"
-            y2="338.5"
+            y2="339"
             gradientUnits="userSpaceOnUse"
           >
-            <stop stop-color="#08060B" stop-opacity="0.2"></stop>
+            <stop stop-color="white" stop-opacity="0.48"></stop>
             <stop
-              offset="0.545554"
-              stop-color="#08060B"
-              stop-opacity="0.5"
+              offset="0.566389"
+              stop-color="white"
+              stop-opacity="0.35"
             ></stop>
-            <stop offset="1" stop-color="#08060B"></stop>
+            <stop offset="1" stop-color="white"></stop>
           </linearGradient>
         </defs>
       </svg>
