h2 e div centrale sezione win million

--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
     <!--Earn-->
     <div class="earn"></div>
     <!--Win Million-->
-    <div class="win"></div>
+    <div class="win-container">
+        <div class="win">
+            <h2><span>Win</span> millions in prizes</h2>
+        </div>
+    </div>
     <!--cake Makes-->
     <div class="cake"></div>
     <!--Start-->
