moon img positioned

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav></nav>
     <!--Carosello-->
     <header>
-      <div class="banner">
+      <div class="elephant">
         <div class="carousel">
           <div class="slide active">
             <div class="slide1">
@@ -136,10 +136,10 @@
           Trade, earn, and win crypto on the most popular decentralized platform
           in the galaxy
         </h3>
-        <a href="#" class="head-btn">Connect wallet</a>
-        <a href="#" class="head-btn2">Trade now</a>
+        <a href="#" class="moon-btn">Connect wallet</a>
+        <a href="#" class="moon-btn2">Trade now</a>
       </div>
-      <img src="./media/static/image (2).webp" alt="">
+      <img id="astro-bunny" src="./media/static/image (2).webp" alt="">
       <div class="round-background">
         <svg
           viewBox="0 0 1660 339"
