--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <p class="semi-bold">in BNB + CAKE won so far</p>
                         <p>Predict the price trend of BNB or <br>
                             CAKE to win</p>
-                        <button class="win-button">Play -></button>
+                        <button class="win-button">Play <svg viewBox="0 0 24 24" color="invertedContrast" width="20px" xmlns="http://www.w3.org/2000/svg" class="sc-231a1e38-0 bmGvXN"><path d="M5 13H16.17L11.29 17.88C10.9 18.27 10.9 18.91 11.29 19.3C11.68 19.69 12.31 19.69 12.7 19.3L19.29 12.71C19.68 12.32 19.68 11.69 19.29 11.3L12.71 4.7C12.32 4.31 11.69 4.31 11.3 4.7C10.91 5.09 10.91 5.72 11.3 6.11L16.17 11H5C4.45 11 4 11.45 4 12C4 12.55 4.45 13 5 13Z"></path></svg></button>
                     </div>
                 </div>
                 <div class="win-card win-card-right">
@@ -109,7 +109,7 @@
                         <p class="semi-bold">in CAKE prizes this round</p>
                         <p>Buy tickets with CAKE, win CAKE <br>
                             if your numbers match</p>
-                        <button class="win-button">Buy Tickets -></button>
+                        <button class="win-button">Buy Tickets <svg viewBox="0 0 24 24" color="invertedContrast" width="20px" xmlns="http://www.w3.org/2000/svg" class="sc-231a1e38-0 bmGvXN"><path d="M5 13H16.17L11.29 17.88C10.9 18.27 10.9 18.91 11.29 19.3C11.68 19.69 12.31 19.69 12.7 19.3L19.29 12.71C19.68 12.32 19.68 11.69 19.29 11.3L12.71 4.7C12.32 4.31 11.69 4.31 11.3 4.7C10.91 5.09 10.91 5.72 11.3 6.11L16.17 11H5C4.45 11 4 11.45 4 12C4 12.55 4.45 13 5 13Z"></path></svg></button>
                     </div>
                 </div>
             </div>
