Animazioni card and balls, z-index da sistemare

--- a/index.html
+++ b/index.html
@@ -72,15 +72,19 @@
     <div class="earn"></div>
     <!--Win Million-->
     <div class="win-container">
-        <img src="./media/2@2x.webp" alt="palla da biliardo" class="img-top-right">
-        <img src="./media/4@2x.webp" alt="palla da biliardo" class="img-top-right">
-        <img src="./media/6@2x.webp" alt="palla da biliardo" class="img-top-right">
-        <img src="./media/7@2x.webp" alt="palla da biliardo" class="img-top-right">
-        <img src="./media/9@2x.webp" alt="palla da biliardo" class="img-top-right">
-        <img src="./media/bottom-left@2x.webp" alt="prediction card" class="img-bottom-left">
-        <img src="./media/green@2x.webp" alt="prediction card" class="img-bottom-left">
-        <img src="./media/red@2x.webp" alt="prediction card" class="img-bottom-left">
-        <img src="./media/top-right@2x.webp" alt="prediction card" class="img-bottom-left">
+        <div class="img-container">
+            <img src="./media/2@2x.webp" alt="palla da biliardo" class="img-top-right">
+            <img src="./media/4@2x.webp" alt="palla da biliardo" class="img-top-right">
+            <img src="./media/6@2x.webp" alt="palla da biliardo" class="img-top-right">
+            <img src="./media/7@2x.webp" alt="palla da biliardo" class="img-top-right">
+            <img src="./media/9@2x.webp" alt="palla da biliardo" class="img-top-right">
+        </div>
+        <div class="img-container">
+            <img src="./media/bottom-left@2x.webp" alt="prediction card" class="img-bottom-left">
+            <img src="./media/green@2x.webp" alt="prediction card" class="img-bottom-left">
+            <img src="./media/red@2x.webp" alt="prediction card" class="img-bottom-left">
+            <img src="./media/top-right@2x.webp" alt="prediction card" class="img-bottom-left">
+        </div>
         <div class="win">
             <h2><span>Win</span> millions in prizes</h2>
             <p>Provably fair, on-chain games.</p>
