moon title, sub-titles completed

--- a/index.html
+++ b/index.html
@@ -130,16 +130,18 @@
     </header>
     <!--The Moon-->
     <div class="moon">
-      <h1>The moon is made of pancakes</h1>
       <div class="head-caption">
+        <h1>The moon is made of pancakes.</h1>
         <h3>
           Trade, earn, and win crypto on the most popular decentralized platform
-          in the galaxy
+          in the galaxy.
         </h3>
-        <a href="#" class="moon-btn">Connect wallet</a>
-        <a href="#" class="moon-btn2">Trade now</a>
+        <div class="head-btns">
+          <a href="#" class="moon-btn">Connect Wallet</a>
+          <a href="#" class="moon-btn2">Trade Now</a>
+        </div>
       </div>
-      <img id="astro-bunny" src="./media/static/image (2).webp" alt="">
+      <img id="astro-bunny" src="./media/static/image (2).webp" alt="" />
       <div class="round-background">
         <svg
           viewBox="0 0 1660 339"
