--- a/index.html
+++ b/index.html
@@ -72,6 +72,62 @@
     <div class="win"></div>
     <!--cake Makes-->
     <div class="cake">
+      <div class="cakeCont">
+        <div class="cakeContainer">
+          <div class="cakeTextCont">
+            <div>
+              <div class="cakeLeftSection">
+                <h2 class="cakeTitle">
+                  <span>Cake </span>
+                  makes our world go round.
+                </h2>
+                <p>
+                  CAKE token is at the heart of the PancakeSwap ecosystem. Buy
+                  it, win it, farm it, spend it, stake it... heck, you can even
+                  vote with it!
+                </p>
+                <div class="cakeButtonLink">
+                  <button class="cakeButton">
+                    <a class="href" ="#">Buy CAKE</a>
+                  </button>
+                  <a class="cakeLink" href="#"
+                    >Learn
+                    <img
+                      src="./media/svg/link-external-svgrepo-com.svg"
+                      alt="Link icon"
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="cakeImgCont">
+              <div class="cakeImg cakeBottom">
+                <img
+                  src="./media/pancake-assets/cake/bottom-right@2x.webp"
+                  alt=""
+                />
+              </div>
+              <div class="cakeImg cakeCenter">
+                <img src="./media/pancake-assets/cake/coin@2x.webp" alt="" />
+              </div>
+              <div class="cakeImg cakeTopLeft">
+                <img
+                  src="./media/pancake-assets/cake/top-left@2x.webp"
+                  alt=""
+                />
+              </div>
+              <div class="cakeImg cakeTopRight">
+                <img
+                  src="./media/pancake-assets/cake/top-right@2x.webp"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="countSection">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!--Start-->
     <div class="start"></div>
