edited the banner class that was causing the spacing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!--Banner-->
-    <div class="banner"></div>
+    <div class="banner-brian"></div>
     <!--Navbar-->
     <nav>
       <div class="navbar-main">
