slide1 logo fixed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             <div class="slide1">
               <div class="caption">
                 <h2 id="purple-webkit">Ev3ryone's Favourite D3X</h2>
-                <p>PancakeSwap v3 is live!</p>
+                <p>
+                  <img src="./media/static/logo.png" alt="pancake-logo" />
+                  PancakeSwap v3 is live!
+                </p>
               </div>
               <a href="#" class="head-btn"
                 >Discover V3
