header media query ipad completed

--- a/index.html
+++ b/index.html
@@ -46,9 +46,19 @@
                 alt="space-station"
               />
               <img
+                id="space-station-ipad"
+                src="./media/static/space-station-ipad.webp"
+                alt="space-station"
+              />
+              <img
                 id="space-bunny"
                 src=".//media/static/space-bunny.webp"
                 alt="space-bunny"
+              />
+              <img
+                id="space-bunny-ipad"
+                src="../media/static/space-bunny-ipad.webp"
+                alt="space-bunny-ipad"
               />
             </div>
           </div>
@@ -58,6 +68,11 @@
                 id="slide2-bunny"
                 src="./media/static/slide2-bunny.webp"
                 alt="slide2-bunny"
+              />
+              <img
+                id="slide2-bunny-ipad"
+                src="./media/static/space-bunny-sl2-ipad.webp"
+                alt="slide2-bunny-ipad"
               />
               <div class="caption">
                 <h2>PancakeSwap v3 Migration</h2>
