fixed some bugs

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           <div class="menu-title">Dark Mode</div>
           <div class="menu-buttons">
             <label class="switch">
-              <input type="checkbox" unchecked>
+              <input type="checkbox" unchecked onchange="toggleDark()">
               <span></span> 
             </label>
           </div>
