--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Banner-->
     <div class="banner-brian"></div>
     <!--Navbar-->
-    <button onclick="toggleDark()" id="dark-mode-button">Clicca qui!</button>
+    <!-- <button onclick="toggleDark()" id="dark-mode-button">Clicca qui!</button>-->
     <div class="navbar-mobile">
       <div class="navbar-mobile-main">
         <div class="navbar-mobile-left">
@@ -122,6 +122,16 @@
           </div>
         </div>
     </div>
+        </div>
+      </div>
+    </div>
+    <div class="security-banner">
+      <div class="security-main">
+        <div class="security-center">
+          <div class="bunny-security"></div>
+        </div>
+        <div class="security-close">
+
         </div>
       </div>
     </div>
