header script merged

--- a/index.html
+++ b/index.html
@@ -1000,5 +1000,6 @@
 <!--footer-->
     <script src="./script/script.js"></script>
     <script src="./components/navbar-component.js"></script>
+    <script src="./script/header.js"></script>
   </body>
 </html>
