numeri random sezione earn & cake

--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
         <div class="topTitle">
           <h2>
             Top
-            <span> Some text </span>
+            <span> Farms </span>
           </h2>
           <button class="topBtn">
             <svg
@@ -998,6 +998,8 @@
 </div>
 
 <!--footer-->
+    <script src="./script/earn.js"></script>
+    <script src="./script/cake.js"></script>
     <script src="./script/script.js"></script>
     <script src="./components/navbar-component.js"></script>
     <script src="./script/header.js"></script>
