--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
                   PancakeSwap v3 is live!
                 </p>
               </div>
-              <a href="#" class="head-btn"
-                >Discover V3
-                <svg
-                  fill="white"
-                  viewBox="0 0 24 24"
-                  color="invertedContrast"
-                  width="20px"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="cub-arrow"
-                >
-                  <path
-                    d="M18 19H6C5.45 19 5 18.55 5 18V6C5 5.45 5.45 5 6 5H11C11.55 5 12 4.55 12 4C12 3.45 11.55 3 11 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V13C21 12.45 20.55 12 20 12C19.45 12 19 12.45 19 13V18C19 18.55 18.55 19 18 19ZM14 4C14 4.55 14.45 5 15 5H17.59L8.46 14.13C8.07 14.52 8.07 15.15 8.46 15.54C8.85 15.93 9.48 15.93 9.87 15.54L19 6.41V9C19 9.55 19.45 10 20 10C20.55 10 21 9.55 21 9V4C21 3.45 20.55 3 20 3H15C14.45 3 14 3.45 14 4Z"
-                  ></path>
-                </svg>
-              </a>
+              <div class="btn-container">
+                <a href="#" class="head-btn"
+                  >Discover V3
+                  <svg
+                    fill="white"
+                    viewBox="0 0 24 24"
+                    color="invertedContrast"
+                    width="20px"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="cub-arrow"
+                  >
+                    <path
+                      d="M18 19H6C5.45 19 5 18.55 5 18V6C5 5.45 5.45 5 6 5H11C11.55 5 12 4.55 12 4C12 3.45 11.55 3 11 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V13C21 12.45 20.55 12 20 12C19.45 12 19 12.45 19 13V18C19 18.55 18.55 19 18 19ZM14 4C14 4.55 14.45 5 15 5H17.59L8.46 14.13C8.07 14.52 8.07 15.15 8.46 15.54C8.85 15.93 9.48 15.93 9.87 15.54L19 6.41V9C19 9.55 19.45 10 20 10C20.55 10 21 9.55 21 9V4C21 3.45 20.55 3 20 3H15C14.45 3 14 3.45 14 4Z"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
               <img
                 id="space-station"
                 src="./media/static/image (2) copia.webp"
@@ -81,36 +83,40 @@
                   fees
                 </p>
               </div>
-              <a href="#" class="head-btn"
-                >Proceed
-                <svg
-                  viewBox="0 0 24 24"
-                  color="white"
-                  width="20px"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="dx-arrow"
-                  fill="white"
-                >
-                  <path
-                    d="M5 13H16.17L11.29 17.88C10.9 18.27 10.9 18.91 11.29 19.3C11.68 19.69 12.31 19.69 12.7 19.3L19.29 12.71C19.68 12.32 19.68 11.69 19.29 11.3L12.71 4.7C12.32 4.31 11.69 4.31 11.3 4.7C10.91 5.09 10.91 5.72 11.3 6.11L16.17 11H5C4.45 11 4 11.45 4 12C4 12.55 4.45 13 5 13Z"
-                  ></path>
-                </svg>
-              </a>
-              <a href="#" class="head-btn2"
-                >Guide
-                <svg
-                  fill="var(--button-color)"
-                  viewBox="0 0 24 24"
-                  color="invertedContrast"
-                  width="20px"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="cub-arrow"
-                >
-                  <path
-                    d="M18 19H6C5.45 19 5 18.55 5 18V6C5 5.45 5.45 5 6 5H11C11.55 5 12 4.55 12 4C12 3.45 11.55 3 11 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V13C21 12.45 20.55 12 20 12C19.45 12 19 12.45 19 13V18C19 18.55 18.55 19 18 19ZM14 4C14 4.55 14.45 5 15 5H17.59L8.46 14.13C8.07 14.52 8.07 15.15 8.46 15.54C8.85 15.93 9.48 15.93 9.87 15.54L19 6.41V9C19 9.55 19.45 10 20 10C20.55 10 21 9.55 21 9V4C21 3.45 20.55 3 20 3H15C14.45 3 14 3.45 14 4Z"
-                  ></path>
-                </svg>
-              </a>
+              <div class="btn-container">
+                <a href="#" class="head-btn"
+                  >Proceed
+                  <svg
+                    viewBox="0 0 24 24"
+                    color="white"
+                    width="20px"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="dx-arrow"
+                    fill="white"
+                  >
+                    <path
+                      d="M5 13H16.17L11.29 17.88C10.9 18.27 10.9 18.91 11.29 19.3C11.68 19.69 12.31 19.69 12.7 19.3L19.29 12.71C19.68 12.32 19.68 11.69 19.29 11.3L12.71 4.7C12.32 4.31 11.69 4.31 11.3 4.7C10.91 5.09 10.91 5.72 11.3 6.11L16.17 11H5C4.45 11 4 11.45 4 12C4 12.55 4.45 13 5 13Z"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
+              <div class="btn-container">
+                <a href="#" class="head-btn2"
+                  >Guide
+                  <svg
+                    fill="var(--button-color)"
+                    viewBox="0 0 24 24"
+                    color="invertedContrast"
+                    width="20px"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="cub-arrow"
+                  >
+                    <path
+                      d="M18 19H6C5.45 19 5 18.55 5 18V6C5 5.45 5.45 5 6 5H11C11.55 5 12 4.55 12 4C12 3.45 11.55 3 11 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V13C21 12.45 20.55 12 20 12C19.45 12 19 12.45 19 13V18C19 18.55 18.55 19 18 19ZM14 4C14 4.55 14.45 5 15 5H17.59L8.46 14.13C8.07 14.52 8.07 15.15 8.46 15.54C8.85 15.93 9.48 15.93 9.87 15.54L19 6.41V9C19 9.55 19.45 10 20 10C20.55 10 21 9.55 21 9V4C21 3.45 20.55 3 20 3H15C14.45 3 14 3.45 14 4Z"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
             </div>
           </div>
           <div class="slide">
@@ -143,25 +149,27 @@
               <img id="star2" src="./media/static/image (6).webp" alt="star2" />
               <div class="caption">
                 <h2>PancakeSwap V3</h2>
-                <p id="purple-webkit">
+                <p class="purple-webkit-2">
                   Claim $135K CAKE Airdrop & exclusive NFT
                 </p>
               </div>
-              <a href="#" class="head-btn"
-                >Learn More
-                <svg
-                  fill="white"
-                  viewBox="0 0 24 24"
-                  color="invertedContrast"
-                  width="20px"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="cub-arrow"
-                >
-                  <path
-                    d="M18 19H6C5.45 19 5 18.55 5 18V6C5 5.45 5.45 5 6 5H11C11.55 5 12 4.55 12 4C12 3.45 11.55 3 11 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V13C21 12.45 20.55 12 20 12C19.45 12 19 12.45 19 13V18C19 18.55 18.55 19 18 19ZM14 4C14 4.55 14.45 5 15 5H17.59L8.46 14.13C8.07 14.52 8.07 15.15 8.46 15.54C8.85 15.93 9.48 15.93 9.87 15.54L19 6.41V9C19 9.55 19.45 10 20 10C20.55 10 21 9.55 21 9V4C21 3.45 20.55 3 20 3H15C14.45 3 14 3.45 14 4Z"
-                  ></path>
-                </svg>
-              </a>
+              <div class="btn-container">
+                <a href="#" class="head-btn"
+                  >Learn More
+                  <svg
+                    fill="white"
+                    viewBox="0 0 24 24"
+                    color="invertedContrast"
+                    width="20px"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="cub-arrow"
+                  >
+                    <path
+                      d="M18 19H6C5.45 19 5 18.55 5 18V6C5 5.45 5.45 5 6 5H11C11.55 5 12 4.55 12 4C12 3.45 11.55 3 11 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V13C21 12.45 20.55 12 20 12C19.45 12 19 12.45 19 13V18C19 18.55 18.55 19 18 19ZM14 4C14 4.55 14.45 5 15 5H17.59L8.46 14.13C8.07 14.52 8.07 15.15 8.46 15.54C8.85 15.93 9.48 15.93 9.87 15.54L19 6.41V9C19 9.55 19.45 10 20 10C20.55 10 21 9.55 21 9V4C21 3.45 20.55 3 20 3H15C14.45 3 14 3.45 14 4Z"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
             </div>
           </div>
           <div class="slide">
@@ -175,21 +183,23 @@
               <div class="caption">
                 <h2>gm eth teams</h2>
               </div>
-              <a href="#" class="head-btn"
-                >👋 Get in Touch
-                <svg
-                  fill="white"
-                  viewBox="0 0 24 24"
-                  color="invertedContrast"
-                  width="20px"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="cub-arrow"
-                >
-                  <path
-                    d="M18 19H6C5.45 19 5 18.55 5 18V6C5 5.45 5.45 5 6 5H11C11.55 5 12 4.55 12 4C12 3.45 11.55 3 11 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V13C21 12.45 20.55 12 20 12C19.45 12 19 12.45 19 13V18C19 18.55 18.55 19 18 19ZM14 4C14 4.55 14.45 5 15 5H17.59L8.46 14.13C8.07 14.52 8.07 15.15 8.46 15.54C8.85 15.93 9.48 15.93 9.87 15.54L19 6.41V9C19 9.55 19.45 10 20 10C20.55 10 21 9.55 21 9V4C21 3.45 20.55 3 20 3H15C14.45 3 14 3.45 14 4Z"
-                  ></path>
-                </svg>
-              </a>
+              <div class="btn-container">
+                <a href="#" class="head-btn"
+                  >👋 Get in Touch
+                  <svg
+                    fill="white"
+                    viewBox="0 0 24 24"
+                    color="invertedContrast"
+                    width="20px"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="cub-arrow"
+                  >
+                    <path
+                      d="M18 19H6C5.45 19 5 18.55 5 18V6C5 5.45 5.45 5 6 5H11C11.55 5 12 4.55 12 4C12 3.45 11.55 3 11 3H5C3.89 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V13C21 12.45 20.55 12 20 12C19.45 12 19 12.45 19 13V18C19 18.55 18.55 19 18 19ZM14 4C14 4.55 14.45 5 15 5H17.59L8.46 14.13C8.07 14.52 8.07 15.15 8.46 15.54C8.85 15.93 9.48 15.93 9.87 15.54L19 6.41V9C19 9.55 19.45 10 20 10C20.55 10 21 9.55 21 9V4C21 3.45 20.55 3 20 3H15C14.45 3 14 3.45 14 4Z"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
             </div>
           </div>
           <div class="slide">
@@ -203,21 +213,23 @@
                 <p>Perpetual Futures</p>
                 <h2>UP TO 100X LEVERAGE</h2>
               </div>
-              <a href="#" class="head-btn"
-                >Trade now
-                <svg
-                  viewBox="0 0 24 24"
-                  color="white"
-                  width="20px"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="dx-arrow"
-                  fill="white"
-                >
-                  <path
-                    d="M5 13H16.17L11.29 17.88C10.9 18.27 10.9 18.91 11.29 19.3C11.68 19.69 12.31 19.69 12.7 19.3L19.29 12.71C19.68 12.32 19.68 11.69 19.29 11.3L12.71 4.7C12.32 4.31 11.69 4.31 11.3 4.7C10.91 5.09 10.91 5.72 11.3 6.11L16.17 11H5C4.45 11 4 11.45 4 12C4 12.55 4.45 13 5 13Z"
-                  ></path>
-                </svg>
-              </a>
+              <div class="btn-container">
+                <a href="#" class="head-btn"
+                  >Trade now
+                  <svg
+                    viewBox="0 0 24 24"
+                    color="white"
+                    width="20px"
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="dx-arrow"
+                    fill="white"
+                  >
+                    <path
+                      d="M5 13H16.17L11.29 17.88C10.9 18.27 10.9 18.91 11.29 19.3C11.68 19.69 12.31 19.69 12.7 19.3L19.29 12.71C19.68 12.32 19.68 11.69 19.29 11.3L12.71 4.7C12.32 4.31 11.69 4.31 11.3 4.7C10.91 5.09 10.91 5.72 11.3 6.11L16.17 11H5C4.45 11 4 11.45 4 12C4 12.55 4.45 13 5 13Z"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
             </div>
           </div>
         </div>
