--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
     <!--Banner-->
     <!--Navbar-->
       <!-- <button onclick="toggleDark()" id="dark-mode-button">Clicca qui!</button>-->
+    <button class="up-button" href=""><svg class="arrow-top" viewBox="0 0 24 24" color="invertedContrast" width="20px" xmlns="http://www.w3.org/2000/svg" class="sc-231a1e38-0 duevIU" style="margin-left: 0px;"><path d="M13 19V7.83001L17.88 12.71C18.27 13.1 18.91 13.1 19.3 12.71C19.69 12.32 19.69 11.69 19.3 11.3L12.71 4.71001C12.32 4.32001 11.69 4.32001 11.3 4.71001L4.69997 11.29C4.30997 11.68 4.30997 12.31 4.69997 12.7C5.08997 13.09 5.71997 13.09 6.10997 12.7L11 7.83001V19C11 19.55 11.45 20 12 20C12.55 20 13 19.55 13 19Z"></path></svg></button>
+    <div class="security-banner">
+      <div class="security-main">
+        <div class="security-center">
+          <div class="bunny-security"></div>
+        </div>
+        <div class="security-close">
+
+        </div>
+      </div>
+    </div>
     <div class="navbar-mobile">
       <div class="navbar-mobile-main">
         <div class="navbar-mobile-left">
@@ -123,16 +134,6 @@
           </div>
         </div>
     </div>
-        </div>
-      </div>
-    </div>
-    <div class="security-banner">
-      <div class="security-main">
-        <div class="security-center">
-          <div class="bunny-security"></div>
-        </div>
-        <div class="security-close">
-
         </div>
       </div>
     </div>
@@ -709,7 +710,7 @@
       </div>
       <div class="poolsFarm">
         <div class="topTitle">
-          <h2>
+          <h2 class="top-title-main">
             Top
             <span> Farms </span>
           </h2>
