--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
             </a>
             <img id="space-station" src="./media/static/image (2) copia.webp" alt="space-station" />
             <img id="space-station-ipad" src="./media/static/space-station-ipad.webp" alt="space-station" />
-            <img id="space-bunny" src=".//media/static/space-bunny.webp" alt="space-bunny" />
-            <img id="space-bunny-ipad" src="../media/static/space-bunny-ipad.webp" alt="space-bunny-ipad" />
+            <img id="space-bunny" src="./media/static/space-bunny.webp" alt="space-bunny" />
+            <img id="space-bunny-ipad" src="./media/static/space-bunny-ipad.webp" alt="space-bunny-ipad" />
           </div>
         </div>
         <div class="slide">
@@ -593,9 +593,9 @@
         <div class="indicator"></div>
       </div>
     </div>
-  </header>
   <!--The Moon-->
   <div class="moon">
+    <div class="align-bunny">
     <div class="head-caption">
       <h1>The moon is made of pancakes.</h1>
       <h3>
@@ -607,24 +607,24 @@
         <a href="#" class="moon-btn2">Trade Now</a>
       </div>
     </div>
-    <div class="head-images">
       <img id="astro-bunny" src="./media/static/image (2).webp" alt="" />
-      <div class="round-background">
-        <svg viewBox="0 0 1660 339" class="sc-231a1e38-0 dPwWVs slide-svg-light" width="100%" color="text"
-          xmlns="http://www.w3.org/2000/svg">
-          <path d="M804 167.023C520.5 167.023 267.5 290.522 0 304.5V339H1660V0.5C1358.83 0.5 1104 167.023 804 167.023Z"
-            fill="url(#paint0_linear_light)"></path>
-          <defs>
-            <linearGradient id="paint0_linear_light" x1="830" y1="84" x2="830" y2="339" gradientUnits="userSpaceOnUse">
-              <stop stop-color="white" stop-opacity="0.48"></stop>
-              <stop offset="0.566389" stop-color="white" stop-opacity="0.35"></stop>
-              <stop offset="1" stop-color="white"></stop>
-            </linearGradient>
-          </defs>
-        </svg>
-      </div>
+    </div>
+    <div class="round-background">
+      <svg viewBox="0 0 1660 339" class="sc-231a1e38-0 dPwWVs slide-svg-light" width="100%" color="text"
+        xmlns="http://www.w3.org/2000/svg">
+        <path d="M804 167.023C520.5 167.023 267.5 290.522 0 304.5V339H1660V0.5C1358.83 0.5 1104 167.023 804 167.023Z"
+          fill="url(#paint0_linear_light)"></path>
+        <defs>
+          <linearGradient id="paint0_linear_light" x1="830" y1="84" x2="830" y2="339" gradientUnits="userSpaceOnUse">
+            <stop stop-color="white" stop-opacity="0.48"></stop>
+            <stop offset="0.566389" stop-color="white" stop-opacity="0.35"></stop>
+            <stop offset="1" stop-color="white"></stop>
+          </linearGradient>
+        </defs>
+      </svg>
     </div>
   </div>
+  </header>
   <!--Millions-->
   <div class="million-container">
     <div class="million">
