header and footer 100% responsive for ipad air and iphone 12 pro

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
         <a href="#" class="moon-btn">Connect Wallet</a>
         <a href="#" class="moon-btn2">Trade Now</a>
       </div>
-    </div>
+    </div class="astroBunnyAling">
       <img id="astro-bunny" src="./media/static/image (2).webp" alt="" />
     </div>
     <div class="round-background">
